# vibe-coding-voice

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  recording-overlay.ps1  run-native.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: MODELS.md  MODELS.zh-CN.md
src/: app.rs  hotkeys.rs  main.rs  qwen_asr.rs  sensevoice.rs  services.rs  state.rs  tray.rs
wix/: Product.wxs
